Fix: popup button text color on mobile

--- a/src/styles/match-popup.css
+++ b/src/styles/match-popup.css
@@ -68,8 +68,9 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 
 .match-popup form button {
-  background: unset;
+  background: white;
   border: 1px solid hsla(0,0%,0%,.2);
   font-size: 1rem;
   cursor: pointer;
+  color: black;
 }
